--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <html>
-  <head><link rel="icon" type="image/png" href="https://drive.google.com/uc?export=download&id=179T3WPVsCutJQWPM1kh1U2F6pdR2Jmdb"></link><title>Light</title></head>
-  <body><a href="http://144.217.35.158:25605/on"><button><h1>ON</h1></button></a><a href="http://144.217.35.158:25605/off"><button><h1>OFF</h1></button></a></body>
+  <head><link rel="icon" type="image/png" href="https://drive.google.com/uc?export=download&id=179T3WPVsCutJQWPM1kh1U2F6pdR2Jmdb"></link><title>Not Light</title></head>
+  <body>
+    <a href="144.217.35.158:25605/"><button>Click me to go to the correct site because programming hard</button></a>
+  </body>
 </html>
